--- a/src/main/resources/templates/disclosure/list.html
+++ b/src/main/resources/templates/disclosure/list.html
@@ -9,16 +9,80 @@
 
 <section>
     <div class="main col-lg-8 bg-white m-auto h-100 p-3 overflow-auto">
-        <h2 class="pt-2 pb-3 text-warning">오늘의 공시</h2>
-        <div class="px-2 pt-3 pb-4 d-flex">
-            <a class="btn btn-outline-primary rounded-pill p-1 m-1" th:href="@{/report/today}" th:classappend="${reportType == 'today'} ? 'btn btn-primary text-white'"><span> 전체 </span></a>
-            <a class="btn btn-outline-primary rounded-pill p-1 m-1" th:href="@{/report/regular}" th:classappend="${reportType == 'regular'} ? 'btn btn-primary text-white'"><span>정기공시</span></a>
-            <a class="btn btn-outline-primary rounded-pill p-1 m-1" th:href="@{/report/share}" th:classappend="${reportType == 'share'} ? 'btn btn-primary text-white'"><span>지분공시</span></a>
-            <a class="btn btn-outline-primary rounded-pill p-1 m-1" th:href="@{/report/contract}" th:classappend="${reportType == 'contract'} ? 'btn btn-primary text-white'"><span>수주공시</span></a>
-            <!--
-                보류
-                <a class="btn btn-outline-primary rounded-pill p-1 m-1" th:href="@{/report/facility}"><span>시설투자</span></a>
-            -->
+        <h2 class="pt-2 pb-3">오늘의 공시</h2>
+        <div class="px-2 pt-3 pb-4 d-flex justify-content-between">
+            <div>
+                <a class="btn btn-outline-primary rounded-pill p-1" th:href="@{/report/today}"
+                   th:classappend="${reportType == 'today'} ? 'btn btn-primary text-white'"><span> 전체 </span></a>
+                <a class="btn btn-outline-primary rounded-pill p-1" th:href="@{/report/regular}"
+                   th:classappend="${reportType == 'regular'} ? 'btn btn-primary text-white'"><span>정기공시</span></a>
+                <a class="btn btn-outline-primary rounded-pill p-1" th:href="@{/report/share}"
+                   th:classappend="${reportType == 'share'} ? 'btn btn-primary text-white'"><span>지분공시</span></a>
+                <a class="btn btn-outline-primary rounded-pill p-1" th:href="@{/report/contract}"
+                   th:classappend="${reportType == 'contract'} ? 'btn btn-primary text-white'"><span>수주공시</span></a>
+                <!--
+                    보류
+                    <a class="btn btn-outline-primary rounded-pill p-1" th:href="@{/report/facility}"><span>시설투자</span></a>
+                -->
+            </div>
+            <div>
+                <a class="btn btn-outline-primary rounded-pill p-1" data-bs-toggle="modal"
+                   data-bs-target="#exampleModal">
+                    <span>
+                        상세검색
+                        <i class="fa fa-search"></i>
+                    </span>
+                </a>
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                     aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">공시 상세검색</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="Close"></button>
+                            </div>
+
+                            <div class="modal-body">
+
+                                <form th:action="@{/report/search}" th:method="POST">
+
+                                    <div class="btn-group w-100 pt-2 pb-4" role="group" aria-label="Basic radio toggle button group">
+                                        <input type="radio" class="btn-check" name="searchType" id="btnradio1" autocomplete="off" checked value="corpName">
+                                        <label class="btn btn-outline-primary" for="btnradio1">기업명</label>
+                                        <input type="radio" class="btn-check" name="searchType" id="btnradio2" autocomplete="off" value="reportNm">
+                                        <label class="btn btn-outline-primary" for="btnradio2">보고서명</label>
+                                    </div>
+
+                                    <div class="d-flex">
+                                        <div class="w-50">
+                                            <label>시작일</label>
+                                            <input class="form-control" type="date" name="startDate">
+                                        </div>
+                                        <div class="w-50">
+                                            <label>종료일</label>
+                                            <input class="form-control" type="date" name="endDate">
+                                        </div>
+                                    </div>
+                                    <br>
+                                    <br>
+
+                                    <div class="text-end pb-4">
+                                        <input class="form-control" type="text" name="searchText" autocomplete="off">
+                                        <button type="submit" class="btn btn-outline-primary">
+                                            <span>검색</span>
+                                        </button>
+                                    </div>
+                                </form>
+
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+            </div>
         </div>
         <div>
             <table class="table">
@@ -31,7 +95,7 @@
                 </tr>
                 </thead>
                 <tbody style="font-size: .75rem;" class="text-center">
-                <tr th:each="report : ${todayReports}">
+                <tr th:each="report : ${reports}">
                     <td th:text="${report.corpName}"></td>
                     <td class="text-primary text-start">
                         <a type="button" th:onclick="reportLink([[${report.rcpNo}]])"
@@ -43,18 +107,18 @@
                 </tbody>
             </table>
         </div>
-        <div class="d-flex justify-content-center" th:if="${todayReports.totalElements > 100}">
+        <div class="d-flex justify-content-center" th:if="${reports.totalElements > 100}">
             <nav aria-label="Page navigation example">
                 <ul class="pagination">
 
-                    <li class="page-item" th:classappend="${1 == todayReports.pageable.pageNumber + 1} ? 'disabled'">
+                    <li class="page-item" th:classappend="${1 == reports.pageable.pageNumber + 1} ? 'disabled'">
                         <a class="page-link" href="#" aria-label="Previous"
-                           th:href="@{/report/today(page=${todayReports.pageable.pageNumber - 1})}">
+                           th:href="@{/report/today(page=${reports.pageable.pageNumber - 1})}">
                             <span aria-hidden="true"> < </span>
                         </a>
                     </li>
 
-                    <li class="page-item" th:classappend="${i == todayReports.pageable.pageNumber + 1} ? 'disabled'"
+                    <li class="page-item" th:classappend="${i == reports.pageable.pageNumber + 1} ? 'disabled'"
                         th:each="i : ${#numbers.sequence(startPage, endPage)}">
                         <a class="page-link"
                            th:href="@{/report/today(page=${i - 1})}">
@@ -63,9 +127,9 @@
                     </li>
 
                     <li class="page-item"
-                        th:classappend="${todayReports.totalPages == todayReports.pageable.pageNumber + 1} ? 'disabled'">
+                        th:classappend="${reports.totalPages == reports.pageable.pageNumber + 1} ? 'disabled'">
                         <a class="page-link" href="#" aria-label="Next"
-                           th:href="@{/report/today(page=${todayReports.pageable.pageNumber + 1})}">
+                           th:href="@{/report/today(page=${reports.pageable.pageNumber + 1})}">
                             <span aria-hidden="true"> > </span>
                         </a>
                     </li>
