--- a/src/main/resources/templates/main/stock.html
+++ b/src/main/resources/templates/main/stock.html
@@ -24,7 +24,7 @@
             <div class="col-md-12 pt-2 pb-2">
                 <div class="card">
                     <div class="card-body">
-                        <h4 class="pb-2"><b>기업개요</b></h4>
+                        <h4 class="pb-2">기업개요</h4>
                         <div class="p-md-2">
                             <h5>업종</h5>
                             <p class="pb-1" th:text="${stock.sector}"></p>
@@ -60,7 +60,7 @@
                         <div style="font-size: .5rem !important;">
 
                             <div class="d-flex justify-content-between align-items-center mb-2">
-                                <h4><b>토론실</b></h4>
+                                <h4>토론실</h4>
                                 <form th:action="@{/board/list}" th:method="GET">
                                     <input type="hidden" name="stock" th:value="${stock.stockId}">
                                     <button type="submit" class="btn btn-outline-primary p-1">
@@ -106,9 +106,10 @@
                         <div style="font-size: .5rem !important;">
 
                             <div class="d-flex justify-content-between align-items-center mb-2">
-                                <h4><b>공시</b></h4>
-                                <button type="button" class="btn btn-outline-primary p-1">
-                                    <i class="fa fa-plus p-1 m-0"></i> <span>더보기</span></button>
+                                <h4>공시</h4>
+                                <button type="button" class="btn btn-outline-primary p-1" th:onclick="stockReport([[${stock.stockId}]])">
+                                    <i class="fa fa-plus p-1 m-0"></i> <span>더보기</span>
+                                </button>
                             </div>
 
                             <table class="table">
@@ -144,6 +145,14 @@
 </div>
 <!-- // SIDEBAR -->
 
+<script>
+    function stockReport(stockId) {
+        if (stockId == "") {
+            alert("유효한 요청이 아닙니다.");
+        }
+        location.href=`/report/s/${stockId}`;
+    }
+</script>
 </body>
 
 </html>
