--- a/src/main/resources/templates/main/stock.html
+++ b/src/main/resources/templates/main/stock.html
@@ -149,6 +149,7 @@
     function stockReport(stockId) {
         if (stockId == "") {
             alert("유효한 요청이 아닙니다.");
+            return false;
         }
         location.href=`/report/s/${stockId}`;
     }
