--- a/src/main/resources/templates/disclosure/list.html
+++ b/src/main/resources/templates/disclosure/list.html
@@ -26,8 +26,7 @@
                 -->
             </div>
             <div>
-                <a class="btn btn-outline-primary rounded-pill p-1" data-bs-toggle="modal"
-                   data-bs-target="#exampleModal">
+                <a class="btn btn-outline-primary rounded-pill p-1" data-bs-toggle="modal" data-bs-target="#exampleModal">
                     <span>
                         상세검색
                         <i class="fa fa-search"></i>
@@ -38,36 +37,30 @@
                      aria-hidden="true">
                     <div class="modal-dialog">
                         <div class="modal-content">
-                            <div class="modal-header">
+                            <div class="modal-header p-2">
                                 <h5 class="modal-title" id="exampleModalLabel">공시 상세검색</h5>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                        aria-label="Close"></button>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
-
                             <div class="modal-body">
-
-                                <form th:action="@{/report/search}" th:method="POST">
-
+                                <form th:action="@{/report/search}" th:method="POST" th:onsubmit="return searchValidation()">
                                     <div class="btn-group w-100 pt-2 pb-4" role="group" aria-label="Basic radio toggle button group">
-                                        <input type="radio" class="btn-check" name="searchType" id="btnradio1" autocomplete="off" checked value="corpName">
-                                        <label class="btn btn-outline-primary" for="btnradio1">기업명</label>
-                                        <input type="radio" class="btn-check" name="searchType" id="btnradio2" autocomplete="off" value="reportNm">
-                                        <label class="btn btn-outline-primary" for="btnradio2">보고서명</label>
+                                        <input type="radio" class="btn-check" name="searchType" id="corpName" autocomplete="off" checked value="corpName">
+                                        <label class="btn btn-outline-primary" for="corpName">기업명</label>
+                                        <input type="radio" class="btn-check" name="searchType" id="reportNm" autocomplete="off" value="reportNm">
+                                        <label class="btn btn-outline-primary" for="reportNm">보고서명</label>
                                     </div>
-
                                     <div class="d-flex">
                                         <div class="w-50">
                                             <label>시작일</label>
-                                            <input class="form-control" type="date" name="startDate">
+                                            <input class="form-control" type="date" name="searchStart" id="searchStart">
                                         </div>
                                         <div class="w-50">
                                             <label>종료일</label>
-                                            <input class="form-control" type="date" name="endDate">
+                                            <input class="form-control" type="date" name="searchEnd" id="searchEnd">
                                         </div>
                                     </div>
                                     <br>
                                     <br>
-
                                     <div class="text-end pb-4">
                                         <input class="form-control" type="text" name="searchText" autocomplete="off">
                                         <button type="submit" class="btn btn-outline-primary">
@@ -75,13 +68,10 @@
                                         </button>
                                     </div>
                                 </form>
-
                             </div>
-
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>
         <div>
@@ -117,19 +107,14 @@
                             <span aria-hidden="true"> < </span>
                         </a>
                     </li>
-
                     <li class="page-item" th:classappend="${i == reports.pageable.pageNumber + 1} ? 'disabled'"
                         th:each="i : ${#numbers.sequence(startPage, endPage)}">
-                        <a class="page-link"
-                           th:href="@{/report/today(page=${i - 1})}">
+                        <a class="page-link" th:href="@{/report/today(page=${i - 1})}">
                             <span th:text="${i}"></span>
                         </a>
                     </li>
-
-                    <li class="page-item"
-                        th:classappend="${reports.totalPages == reports.pageable.pageNumber + 1} ? 'disabled'">
-                        <a class="page-link" href="#" aria-label="Next"
-                           th:href="@{/report/today(page=${reports.pageable.pageNumber + 1})}">
+                    <li class="page-item" th:classappend="${reports.totalPages == reports.pageable.pageNumber + 1} ? 'disabled'">
+                        <a class="page-link" href="#" aria-label="Next" th:href="@{/report/today(page=${reports.pageable.pageNumber + 1})}">
                             <span aria-hidden="true"> > </span>
                         </a>
                     </li>
@@ -146,6 +131,7 @@
 
 <script th:src="@{/js/common.js}"></script>
 <script th:src="@{/js/disclosure.js}"></script>
+
 
 </body>
 
