--- a/src/main/resources/templates/disclosure/list.html
+++ b/src/main/resources/templates/disclosure/list.html
@@ -9,9 +9,9 @@
 
 <section>
     <div class="main col-lg-8 bg-white m-auto h-100 p-3 overflow-auto">
-        <h4 class="pt-2 pb-3">오늘의 공시</h4>
+        <h4 class="pt-2 pb-3" th:if="!${stock}">오늘의 공시</h4>
         <div class="px-2 pt-3 pb-4 d-flex justify-content-between">
-            <div>
+            <div th:if="!${stock}">
                 <a class="btn btn-outline-primary rounded-pill p-1" th:href="@{/report/today}"
                    th:classappend="${reportType == 'today'} ? 'btn btn-primary text-white'"><span> 전체 </span></a>
                 <a class="btn btn-outline-primary rounded-pill p-1" th:href="@{/report/regular}"
@@ -25,8 +25,38 @@
                     <a class="btn btn-outline-primary rounded-pill p-1" th:href="@{/report/facility}"><span>시설투자</span></a>
                 -->
             </div>
-            <div>
-                <a class="btn btn-outline-primary rounded-pill p-1" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            <div th:if="${stock}">
+                <h4 class="py-3">
+                    <span class="fw-bold text-primary" th:text="${stock.stockName}"></span>
+                    <span th:text="${stock.stockId}"></span>
+                    <span class="badge bg-warning text-dark" th:if="${stock.market} == 'p'">
+                        <span>KOSPI</span>
+                    </span>
+                    <span class="badge bg-warning text-dark" th:if="${stock.market} == 'd'">
+                        <span>KOSDAQ</span>
+                    </span>
+                </h4>
+
+                <button type="button" class="btn btn-outline-primary rounded-pill p-1"
+                        th:onclick="reportTypeLink([[${stock.stockId}]], 'all')"
+                        th:classappend="${reportType == 'today'} ? 'btn btn-primary text-white'"><span> 전체 </span>
+                </button>
+                <button type="button" class="btn btn-outline-primary rounded-pill p-1"
+                        th:onclick="reportTypeLink([[${stock.stockId}]], 'regular')"
+                        th:classappend="${reportType == 'regular'} ? 'btn btn-primary text-white'"><span>정기공시</span>
+                </button>
+                <button type="button" class="btn btn-outline-primary rounded-pill p-1"
+                        th:onclick="reportTypeLink([[${stock.stockId}]], 'share')"
+                        th:classappend="${reportType == 'share'} ? 'btn btn-primary text-white'"><span>지분공시</span>
+                </button>
+                <button type="button" class="btn btn-outline-primary rounded-pill p-1"
+                        th:onclick="reportTypeLink([[${stock.stockId}]], 'contract')"
+                        th:classappend="${reportType == 'contract'} ? 'btn btn-primary text-white'"><span>수주공시</span>
+                </button>
+            </div>
+            <div th:if="!${stock}">
+                <a class="btn btn-outline-primary rounded-pill p-1" data-bs-toggle="modal"
+                   data-bs-target="#exampleModal">
                     <span>
                         상세검색
                         <i class="fa fa-search"></i>
@@ -39,14 +69,19 @@
                         <div class="modal-content">
                             <div class="modal-header p-2">
                                 <h5 class="modal-title" id="exampleModalLabel">공시 상세검색</h5>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
-                                <form th:action="@{/report/search}" th:method="POST" th:onsubmit="return searchValidation()">
-                                    <div class="btn-group w-100 pt-2 pb-4" role="group" aria-label="Basic radio toggle button group">
-                                        <input type="radio" class="btn-check" name="searchType" id="corpName" autocomplete="off" checked value="corpName">
+                                <form th:action="@{/report/search}" th:method="POST"
+                                      th:onsubmit="return searchValidation()">
+                                    <div class="btn-group w-100 pt-2 pb-4" role="group"
+                                         aria-label="Basic radio toggle button group">
+                                        <input type="radio" class="btn-check" name="searchType" id="corpName"
+                                               autocomplete="off" checked value="corpName">
                                         <label class="btn btn-outline-primary" for="corpName">기업명</label>
-                                        <input type="radio" class="btn-check" name="searchType" id="reportNm" autocomplete="off" value="reportNm">
+                                        <input type="radio" class="btn-check" name="searchType" id="reportNm"
+                                               autocomplete="off" value="reportNm">
                                         <label class="btn btn-outline-primary" for="reportNm">보고서명</label>
                                     </div>
                                     <div class="d-flex">
@@ -63,7 +98,7 @@
                                     <br>
                                     <div class="text-end pb-4">
                                         <input class="form-control" type="text" name="searchText" autocomplete="off">
-                                        <button type="submit" class="btn btn-outline-primary">
+                                        <button type="submit" class="btn btn-outline-primary mt-2">
                                             <span>검색</span>
                                         </button>
                                     </div>
@@ -113,8 +148,10 @@
                             <span th:text="${i}"></span>
                         </a>
                     </li>
-                    <li class="page-item" th:classappend="${reports.totalPages == reports.pageable.pageNumber + 1} ? 'disabled'">
-                        <a class="page-link" href="#" aria-label="Next" th:href="@{/report/today(page=${reports.pageable.pageNumber + 1})}">
+                    <li class="page-item"
+                        th:classappend="${reports.totalPages == reports.pageable.pageNumber + 1} ? 'disabled'">
+                        <a class="page-link" href="#" aria-label="Next"
+                           th:href="@{/report/today(page=${reports.pageable.pageNumber + 1})}">
                             <span aria-hidden="true"> > </span>
                         </a>
                     </li>
