--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -14,7 +14,7 @@
             <div class="col-md-12 py-4">
                 <div class="card">
                     <div class="card-body">
-                        <h4><b>오늘의 증시</b></h4>
+                        <h4><span>오늘의 증시</span></h4>
                         <div style="background: #f3f3f3; height: 215px; width: 100%;"></div>
                     </div>
                 </div>
@@ -31,7 +31,7 @@
                         <div style="font-size: .5rem !important;">
 
                             <div class="d-flex justify-content-between align-items-center mb-2">
-                                <h4><b>인기글</b></h4>
+                                <h4><span>인기글</span></h4>
                                 <a class="btn btn-outline-primary p-1" th:href="@{/main/hot}">
                                     <i class="fa fa-plus p-1 m-0"></i> <span>더보기</span>
                                 </a>
@@ -136,7 +136,7 @@
                         <div style="font-size: .5rem !important;">
 
                             <div class="d-flex justify-content-between align-items-center mb-2">
-                                <h4><b>최근공시</b></h4>
+                                <h4><span>최근공시</span></h4>
                                 <a type="button" class="btn btn-outline-primary p-1" th:href="@{/report/today}">
                                     <i class="fa fa-plus p-1 m-0"></i> <span>더보기</span></a>
                             </div>
