--- a/src/main/resources/templates/board/update.html
+++ b/src/main/resources/templates/board/update.html
@@ -26,7 +26,7 @@
             <br>
 
             <label class="fw-bold py-2 text-primary">내용</label>
-            <textarea class="form-control board-content card-body overflow-auto" name="content" th:value="${board.content}"></textarea>
+            <textarea class="form-control board-content card-body overflow-auto" name="content"><th:block th:text="${board.content}"></th:block></textarea>
             <div class="py-3 text-end">
                 <button type="submit" class="btn btn-outline-primary text-end"><span>저장</span></button>
             </div>
